# MeDiPack

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  template.style  test.cpp  test.hpp  todo.txt  updateTests.sh
cmake/: medipack-config-version.cmake  medipack-config.cmake  medipack-include.cmake
definitions/: handled.txt  miscDefinitions.xml  miscFunctions.xml  mpiDatatypes.xml  mpiDefinitions.xml  mpiFunctions.xml  unhandledFunctions.xml
doc/: Changelog.md  MeDiLayout.xml  Tutorial1.md  Tutorial2.md  Tutorials.md  helloWorld.cpp  mainpage.md  mpiDefinitions_layout.md  mpiFunctions_layout.md  tutorial1.cpp  tutorial2.cpp  xml_layout.md
include/: adToolInterface.h  codiMediPackTypes.hpp  medi.hpp  medipack.h  mpiTypeDefault.hpp  mpiTypeInterface.hpp  op.hpp  reverseFunctions.hpp
include/medi/: adToolImplCommon.hpp  adToolInterface.h  adToolPassive.hpp  adjointInterface.hpp  adolcMeDiPackTypes.hpp  codiForwardMediPackTypes.hpp  codiMediPackTypes.hpp  debugInformation.hpp  displacementTools.hpp  exceptions.hpp  macros.h  medi.hpp  medipack.h  mpiInPlace.hpp  mpiOp.hpp  mpiTools.h  mpiTypeDefault.hpp  mpiTypeInterface.hpp  mpiTypePassive.hpp  reverseFunctions.hpp  typeDefinitions.h
include/medi/ampi/: ampi.hpp  ampiMisc.h  async.hpp  constructedDatatypes.hpp  enums.hpp  forwardFunctions.hpp  inPlace.hpp  message.hpp  op.hpp  operatorFunctions.hpp  primalFunctions.hpp  reverseFunctions.hpp  typeDefault.hpp  typeInterface.hpp  (+2 more)
include/tampi/: async.hpp  wrappers.hpp
src/ampi/: async.cpp
src/medi/: adolcMeDiPackTypes.cpp  debugInformation.cpp  medi.cpp
src/tampi/: async.cpp
templates/: ampiFunctions_hpp.gsl  mpiFunctions_hpp.gsl  tampiFunctions_hpp.gsl
templates/medi/: ampiDatatypes_cpp.gsl  ampiDatatypes_h.gsl  ampiDefinitions_cpp.gsl  ampiDefinitions_h.gsl  ampiFunctions_hpp.gsl  basicTemplates.gsl  license_c.header  miscAmpiDefinitions_h.gsl  miscAmpiFunctions_hpp.gsl  mpiAmpiDefinitions_cpp.gsl
tests/: Makefile  compare.sh
tests/drivers/: globalDefines.h
tests/helpers/: adjointSleep.hpp
(+169 files in other folders)
